# SolarLD

./: .env.example  .env.staging.example  .gitignore  .prettierignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  mypy.ini  package.json  pyproject.toml  railway.toml  run.py  worker.railway.toml
apps/api/infra/: dns_info-solarlead_it.txt  dns_pro-solarlead_com.txt  dns_solarlead-energia_it.txt  dns_solarlead-progetti_it.txt  shadow_domain_provisioning_guide.md  shadow_domains_topology.json
apps/api/scripts/: collaudo_total_trade.py  energivori_gate_dryrun.py  energivori_import.py  load_istat_income.py  prevalidate_contacts.py  seed_demo_pipeline.py  seed_test_tenant.py
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py  base.py  compliance.py  conversation.py  creative.py  email_extraction.py  hunter.py  hunter_b2c.py  identity.py  outreach.py  replies.py  scoring.py  tracking.py
apps/api/src/agents/hunter_funnel/: __init__.py  level1_discovery.py  level1_places.py  level2_enrichment.py  level2_scraping.py  level3_proxy_score.py  level3_quality.py  level4_solar_gate.py  level4_solar_qualify.py  level5_proxy_score.py  (+5 more)
apps/api/src/core/: __init__.py  config.py  database.py  logging.py  queue.py  redis.py  security.py  supabase_client.py  tier.py
apps/api/src/data/: province_centroids.py
apps/api/src/email_templates/: _base.html.j2  _gdpr_footer.txt.j2  followup_cold.html.j2  followup_cold.txt.j2  followup_engaged.html.j2  followup_engaged.txt.j2  followup_interessato.html.j2  followup_interessato.txt.j2  followup_lukewarm.html.j2  followup_lukewarm.txt.j2  followup_riattivazione.html.j2  followup_riattivazione.txt.j2  outreach_b2b.html.j2  outreach_b2b.txt.j2  outreach_b2b_step2.html.j2  outreach_b2b_step2.txt.j2  outreach_b2b_step3.txt.j2  outreach_b2c.html.j2  outreach_b2c.txt.j2  outreach_b2c_step2.txt.j2  outreach_b2c_step3.html.j2  outreach_b2c_step3.txt.j2  outreach_conversational_b2b.html.j2  outreach_conversational_b2b.txt.j2  outreach_conversational_b2b_step2.html.j2  outreach_conversational_b2b_step2.txt.j2  outreach_conversational_b2b_step3.html.j2  outreach_conversational_b2b_step3.txt.j2  outreach_conversational_b2b_step4.html.j2  outreach_conversational_b2b_step4.txt.j2  outreach_solarld_b2b.html.j2  outreach_solarld_b2b.txt.j2  outreach_solarld_minimal.html.j2  outreach_solarld_minimal.txt.j2  outreach_solarld_premium.html.j2  outreach_solarld_premium.txt.j2  outreach_solarld_premium_step2.html.j2  outreach_solarld_premium_step2.txt.j2  outreach_solarld_premium_step3.html.j2  outreach_solarld_premium_step3.txt.j2  (+2 more)
apps/api/src/models/: enums.py  lead.py  territory.py
apps/api/src/practice_templates/: _base.html.j2  attestazione_titolo.html.j2  comunicazione_comune.html.j2  dm_37_08.html.j2  modello_unico_p1.html.j2  modello_unico_p2.html.j2  schema_unifilare.html.j2  tica_areti.html.j2  transizione_50_attestazione.html.j2  transizione_50_ex_ante.html.j2  transizione_50_ex_post.html.j2
apps/api/src/prompts/: proxy_score.md  proxy_score_v3.md
apps/api/src/quote_templates/: preventivo.html.j2
apps/api/src/routes/: acquisition_campaigns.py  admin.py  analytics.py  auth.py  b2c_exports.py  b2c_outreach.py  branding.py  campaigns.py  cluster_ab.py  contatti.py  crm_webhooks.py  demo.py  email_domains.py  email_templates.py  events.py  experiments.py  followup.py  gdpr.py  health.py  imminence.py  inboxes.py  leads.py  linkedin_enrich.py  modules.py  notifications.py  onboarding.py  outreach_sends.py  practices.py  prospector.py  public.py  quarantine.py  quotes.py  sector_news.py  sectors.py  tenant_config.py  tenants.py  territories.py  territory.py  unsubscribe.py  usage.py  (+2 more)
apps/api/src/scripts/: e2e_pipeline_test.py  shadow_domain_setup.py
apps/api/src/services/: __init__.py  active_lead_notify_service.py  aerial_vision_service.py  ai_panel_paint_service.py  appointment_service.py  atoka_mock.py  atoka_query_builder.py  audit_service.py  b2c_audience_service.py  b2c_qualify_service.py  bolletta_ocr_service.py  building_identification.py  building_quality_filter.py  claude_service.py  claude_vision_service.py  cluster_ab_evaluator_service.py  cluster_service.py  consumption_estimator.py  contact_extractor.py  contact_prevalidation_service.py  contact_waterfall.py  content_validator.py  cost_calculator.py  crm_webhook_service.py  custom_template_service.py  daily_pipeline_orchestrator.py  daily_target_cap_service.py  decision_maker_finder.py  decision_maker_name.py  deliverability_monitor_service.py  demo_amministratori_data.py  dialog360_service.py  digest_service.py  dns_verification_service.py  email_extractor.py  email_quality.py  email_template_service.py  encryption_service.py  energivori_contact_gate.py  energivori_import_service.py  (+84 more)
apps/api/src/workers/: __init__.py  cron.py  main.py
apps/api/tests/: conftest.py  test_active_lead_notify.py  test_address_extractor.py  test_admin_exclude_lead.py  test_ateco_compatibility.py  test_building_quality_filter.py  test_claude_vision_parser.py  test_compliance_hash.py  test_config_validator.py  test_contact_extractor.py  test_contact_prevalidation.py  test_contact_request_notification_sender.py  test_contact_waterfall.py  test_contact_waterfall_registro.py  test_cost_calculator.py  test_creative_agent.py  test_crm_webhook_service.py  test_daily_pipeline_afternoon_catchup.py  test_daily_pipeline_telemetry_guard.py  test_daily_target_cap_service.py  test_decision_maker_finder.py  test_decision_maker_name.py  test_demo_pipeline_runs.py  test_digest_service.py  test_e2e_flow.py  test_email_quality.py  test_email_template_service.py  test_energivori_contact_gate.py  test_energivori_import.py  test_energivori_ingest.py  test_engagement_score.py  test_experiment_stats.py  test_filter_proprieta.py  test_followup_selector.py  test_funnel_stall.py  test_google_places_parser.py  test_health.py  test_hunter_config_filters.py  test_hunter_filters.py  test_hunter_funnel_skips_inactive_scan_job.py  (+67 more)
(+399 files in other folders)
