[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarlead-api"
version = "0.1.0"
description = "SolarLead — FastAPI backend with Claude agents"
authors = [{ name = "Alfonso Gallo" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "UNLICENSED" }

dependencies = [
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",

  # Database
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "supabase>=2.10.0",

  # Queue & cache
  "redis[hiredis]>=5.2.0",
  "arq>=0.26.1",               # Python-native task queue (BullMQ-like)

  # AI
  "anthropic>=0.39.0",
  "replicate>=1.0.0",

  # HTTP clients
  "httpx>=0.28.0",
  "tenacity>=9.0.0",

  # Auth / security
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.10.0",

  # Email validation (required by pydantic EmailStr used in inboxes.py)
  "email-validator>=2.2.0",

  # Form parsing (required by FastAPI Form() in unsubscribe.py — RFC 8058 one-click POST)
  "python-multipart>=0.0.18",

  # DNS record verification for outreach domain setup (SPF/DKIM/DMARC)
  "dnspython>=2.7.0",

  # Utilities
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "orjson>=3.10.11",
  # Pinned: the 0.9.0 manylinux wheel ships a broken layout missing the
  # top-level ``geohash`` module (``import geohash`` -> ModuleNotFoundError on
  # the Linux CI runner). 0.8.5 is the last release with a working module.
  "python-geohash==0.8.5",
  "shapely>=2.0.6",
  "pyproj>=3.7.0",

  # Monitoring
  "sentry-sdk[fastapi]>=2.19.0",

  # Email templating
  "jinja2>=3.1.4",
  "premailer>=3.10.0",
  # HTML sanitization for custom tenant email templates (Sprint 9 Fase C)
  "bleach>=6.1.0",

  # Image processing — solar panel overlay on GeoTIFF aerial imagery
  "Pillow>=11.0.0",
  # Before/after pixel alignment (ECC registration) so the crossfade
  # reveal doesn't show the roof jumping. headless = no GUI/X11 deps.
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0",

  # PDF generation for postcards + B2C door-to-door exports
  "reportlab>=4.2.5",
  "qrcode[pil]>=8.0",

  # HTML→PDF rendering for the lead → preventivo flow. WeasyPrint has
  # first-class CSS Paged Media support (`@page`, page-breaks, running
  # elements) which the 7-page preventivo template uses heavily.
  # System libs (Pango, Cairo, GDK-Pixbuf) are provisioned in the
  # Dockerfile's runtime stage.
  "weasyprint>=63.0",

  # B2C door-to-door Excel export for field agents
  "openpyxl>=3.1.5",

  # PDF→image rasterisation for Claude Vision OCR pipeline (practice
  # uploads: visura camerale, carta d'identità, bolletta).  Pure-Python
  # wheel built on PDFium — no system-lib dependency (unlike pdf2image
  # which needs poppler), so the Dockerfile is unchanged.
  "pypdfium2>=4.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.28.0",
  "testcontainers[postgres,redis]>=4.8.2",
  "ruff>=0.8.1",
  "mypy>=1.13.0",
  "types-redis>=4.6.0",
  "vcrpy>=6.0.2",
  "faker>=33.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC", "S", "C4", "PT", "SIM"]
ignore = [
  "S101",    # assert — used in tests
  "E501",    # line too long — handled by formatter
  # Pre-existing violations (tech debt, tracked separately)
  "E701",    # multiple statements on one line — intentional in lookup tables
  "B904",    # raise without `from err` — widespread legacy pattern
  "S110",    # try-except-pass — intentional no-op fallbacks
  "PT011",   # pytest.raises without match — pre-existing test style
  "N818",    # exception names — would need full rename refactor
  "SIM105",  # contextlib.suppress — explicit try-except preferred here
  "B008",    # function calls in default args — FastAPI Depends() pattern
  "PT019",   # fixture without value params — pre-existing test style
  "S324",    # md5/sha1 — used only in mock data generation
  "B023",    # function in loop — pre-existing, not in hot paths
  "S105",    # hardcoded password — dev config defaults only
  "S701",    # jinja2 autoescape — pre-existing, internal templates only
  "ASYNC230",# httpx blocking call — pre-existing
  "N806",    # variable name lowercase — pre-existing
  "SIM117",  # single with statement — pre-existing
  "S311",    # random for A/B split — intentional, not security-sensitive
  "F821",    # undefined name — false positives (local imports, method order)
  "ASYNC109",# async timeout — pre-existing
  "N802",    # function name lowercase — pre-existing
  "S104",    # binding to all interfaces — dev server 0.0.0.0
  "B017",    # assertRaises — pre-existing test style
  "SIM102",  # single if — pre-existing
  "B005",    # strip with multi-char — pre-existing
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
# Mypy is configured via mypy.ini (same directory) which has the correct
# disable_error_code syntax for mypy 1.20+. This section is kept as a
# reference only — mypy.ini takes precedence when both files exist.
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = ["src"]
